# de

./: .gitignore  README.md  convert.py  pyproject.toml
german_verbs/: __init__.py  cli.py  colors.py  converter.py  learn.py  verbs.py
verben/: irregular-verbs-a1.yaml  irregular-verbs-b.yaml  t-verben.MD
