[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "german-verbs"
version = "0.2.0"
description = "Tools for working with German verb data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
german-verbs = "german_verbs.cli:main"
yaml2md = "german_verbs.converter:yaml_to_md_cli"
learn-verbs = "german_verbs.learn:learn"

[tool.setuptools]
packages = ["german_verbs"] 